--- a/_output.yml
+++ b/_output.yml
@@ -10,7 +10,7 @@ bookdown::gitbook:
     download: ["pdf", "epub"]
 bookdown::pdf_book:
   includes:
-    in_header: preamble.tex
+    in_header: header2.tex
   latex_engine: xelatex
   citation_package: natbib
   keep_tex: yes
